--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
                 width: 600px;
                 height: 650px;
             }
+            .map {
+                width: 600px;
+                height: 650px;
+                border: 3px dashed rgba(83,206,255,0.6);
+                border-radius: 3px
+            }
             .left {
                 float: left;
                 margin: 2%;
             }
-            .hide {
+            .hidden {
                 display: none;
             }
         </style>
     </head>
     <body>
-        <div id="map" class="left"></div>
-        <div class="left hide">
+        <div id="map" class="map left"></div>
+        <div id="map_right" class="map left hidden"></div>
+        <input type="button" value="워프 해주세요" id="wrap" class="hidden"/>
+        <div class="left hidden">
             <label>Animation : &nbsp;</label>
             <select id="animation">
                 <option value="" selected>None</option>
@@ -31,6 +39,6 @@
                 <option value="move_fast">한국으로 이동(0초)</option>
             </select>
         </div>
-        <script src="./flightAnimation.js"></script>
+        <script src="./test.js"></script>
     </body>
 </html>
